# qr-code-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml.example  justfile
assets/: index.html
src/: main.rs
src/model/: mod.rs  verification.rs
src/model/epc/: identification.rs  mod.rs  purpose.rs  version.rs
src/model/wifi/: encryption.rs  mod.rs
src/routes/: generate.rs
src/routes/generate/: epc.rs  mod.rs  wifi.rs
src/utils/: generate.rs
src/utils/generate/: mod.rs  png_from_string.rs  response.rs
src/utils/verify/: mod.rs
