[package]
# name = "rust_template"
name = "qr_code_api"
description = "AstragoDE's Rust Template"
# authors = ["AstragoDE <51675359+AstragoDE@users.noreply.github.com>"]
authors = ["AstragoDE <51675359+AstragoDE@users.noreply.github.com>"]
version = "0.1.2"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ===== PROFILES =====

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 0

[profile.release]
opt-level = 3

[profile.release.package."*"]
opt-level = 3


# ===== DEPENDENCIES =====

[dependencies]
axum = { version = "0.8.4", features = ["tokio", "tracing", "json"] }
iban_validate = "5.0.1"
image = "0.25.8"
qrcode = "0.14.1"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
